<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MealPlan">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/mealplan_title" />

        <LinearLayout
            android:id="@+id/inputLayout"
            android:layout_width="match_parent"
            android:layout_height="104dp"
            android:layout_marginHorizontal="20dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <EditText
                android:id="@+id/inputCaloriesBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:hint="@string/mealplan_name"
                android:inputType="text"
                android:maxLines="1"
                android:backgroundTint="@color/colorPrimary"
                android:textCursorDrawable="@null"/>

            <ImageButton
                android:id="@+id/searchCaloriesButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_search"
                android:tint="@color/colorPrimary" />
        </LinearLayout>

        <TextView
            android:id="@+id/hint_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="20dp"
            android:text="@string/mealplan_desc" />

        <my.edu.utar.uccd3223.util.NonScrollListView
            android:id="@+id/lv_recipe_frag"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="34dp"
            android:layout_marginTop="40dp"></my.edu.utar.uccd3223.util.NonScrollListView>

    </LinearLayout>

</ScrollView>