<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ingredient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/ingredient_title" />

        <RelativeLayout
            android:id="@+id/inputLayoutR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <LinearLayout
                android:id="@+id/inputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp"
                tools:ignore="UselessParent">

                <EditText
                    android:id="@+id/ingredientinputBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorPrimary"
                    android:hint="@string/ingredient_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textCursorDrawable="@null" />

                <ImageButton
                    android:id="@+id/addButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_add"
                    android:tint="@color/colorPrimary" />

            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/hint_text"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/ingredient_desc" />

            <Button
                android:id="@+id/searchIngredientButton"
                style="@style/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="16dp"
                android:background="@drawable/button"
                android:drawableLeft="@drawable/ic_search"
                android:drawableTint="@color/colorPrimary"
                android:padding="15dp"
                android:text="Search"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

        <my.edu.utar.uccd3223.util.NonScrollListView
            android:id="@+id/lv_recipe_frag"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="34dp"></my.edu.utar.uccd3223.util.NonScrollListView>

    </LinearLayout>

</ScrollView>